# urirun-connector-calendar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_calendar.py  test_formats.py
urirun_connector_calendar/: core.py  formats.py
