[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-calendar"
version = "0.1.0"
description = "Headless calendar over ICS/CalDAV: list events, create (gated), parse .ics. No GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tom Sapletta" }]
dependencies = ["urirun>=0.4.14"]

[project.entry-points."urirun.bindings"]
calendar = "urirun_connector_calendar.core:urirun_bindings"

[tool.setuptools.packages.find]
include = ["urirun_connector_calendar*"]
